Using Collections.unmodifiableList instead of List.copyOf