@@ -22,6 +22,7 @@ along with this file.  If not, see <https://www.gnu.org/licenses/>.
 package it.unimi.di.prog2.l14.ci.ec;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class LogAdderComp {
@@ -43,6 +44,6 @@ public class LogAdderComp {
   }
 
   public List<Integer> log() {
-    return List.copyOf(seen);
+    return Collections.unmodifiableList(seen);
   }
 }
